--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,13 +1,21 @@
-<h1>餐廳後台</h1>
-<ul>
-  <% @restaurants.each do |restaurant| %>
-  <li>
-    <%= restaurant.name %>
-    <%= link_to 'Show', admin_restaurant_path(restaurant) %>
-    <%= link_to 'Edit', edit_admin_restaurant_path(restaurant) %>
-    <%= link_to 'Delete', admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"} %>
-  </li>
-  <% end %>
-</ul>
-<%= paginate @restaurants %>
-<%= link_to 'New Restaurant', new_admin_restaurant_path %>
+<div class="container clearfix">
+  <h1>餐廳後台</h1>
+  <div class="btn btn-default circle">
+    <a href="/admin/restaurants/new">
+      <span class="glyphicon glyphicon-plus center" aria-hidden="true"></span>
+    </a>
+  </div>
+  <div class="content">
+    <ul>
+      <% @restaurants.each do |restaurant| %>
+        <li class="clearfix">
+          <%= restaurant.name %>
+          <%= link_to 'Show', admin_restaurant_path(restaurant), class: "btn btn-default btn-right" %>
+          <%= link_to 'Edit', edit_admin_restaurant_path(restaurant), class: "btn btn-default btn-right" %>
+          <%= link_to 'Delete', admin_restaurant_path(restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+  <%= paginate @restaurants %><br>
+</div>
