--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,19 +6,56 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <% if current_user %>
-  Hi, <%= current_user.email %>
-    <%= link_to('登出', destroy_user_session_path, method: :delete) %> |
-    <%= link_to('修改密碼', edit_user_registration_path) %>
-  <% else %>
-    <%= link_to('註冊', new_user_registration_path) %> |
-    <%= link_to('登入', new_user_session_path) %>
- <% end %>
+      <% if current_user.admin? %> 
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/">餐廳評論網</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+    
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="/admin/restaurants">後台管理</a></li>
+              </ul>
+          </div>
+        </nav>
+      <% end %>
+    <% end %>
+    <div class="nav navbar-nav navbar-right user">
+      <% if current_user %>
+        Hi, <%= current_user.email %>
+        <%= link_to('登出', destroy_user_session_path, method: :delete) %> |
+        <%= link_to('修改密碼', edit_user_registration_path) %>
+      <% else %>
+        <%= link_to('註冊', new_user_registration_path) %> |
+        <%= link_to('登入', new_user_session_path) %>
+      <% end %>
+    </div>
+    <% if notice %>
+      <div class="alert remind fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+        <p><%= notice %></p>
+      </div>
+    <% elsif alert %>
+      <div class="alert remind fade in">
+        <a href="#" class="close" data-dismiss="alert" aria-label="close">×</a>
+        <p><%= alert %></p>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
