--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -1,31 +1,83 @@
-<% if @restaurant.errors.any? %>
-  <h2>We have some errors here !</h2>
-  <ul>
-    <% @restaurant.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="form form-box">
+  <!--表單-->
+  <%= form_for [:admin, @restaurant] do|f| %>
+    <div class="form-group">
+      <%= f.label :name, "Name" %>
+      <%= f.text_field :name, class: "form-control" %>
+      <% if @restaurant.errors.present? %>
+        <ul>
+          <% @restaurant.errors.each do |error,message|%>
+            <% if error == :name %>
+              <li><%= "Title #{message}" %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
 
-<%= form_for  [:admin, @restaurant] do |f| %>
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
+    <div class="form-group">
+      <%= f.label :tel, "Tel" %>
+      <%= f.text_field :tel, class: "form-control" %>
+      <% if @restaurant.errors.present? %>
+        <ul>
+          <% @restaurant.errors.each do |error,message|%>
+            <% if error == :tel %>
+              <li><%= "Tel #{message}" %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
 
-  <%= f.label :tel, "Tel" %>
-  <%= f.text_field :tel %>
+    <div class="form-group">
+      <%= f.label :address, "Address" %>
+      <%= f.text_field :address, class: "form-control" %>
+      <% if @restaurant.errors.present? %>
+        <ul>
+          <% @restaurant.errors.each do |error,message|%>
+            <% if error == :address %>
+              <li><%= "Address #{message}" %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
 
-  <%= f.label :address, "Address" %>
-  <%= f.text_field :address %>
+    <div class="form-group">
+      <%= f.label :opening_hours, "Opening Hours" %>
+      <%= f.text_field :opening_hours, class: "form-control" %>
+      <% if @restaurant.errors.present? %>
+        <ul>
+          <% @restaurant.errors.each do |error,message|%>
+            <% if error == :opening_hours %>
+              <li><%= "Opening hours #{message}" %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
 
-  <%= f.label :opening_hours, "Opening Hours" %>
-  <%= f.text_field :opening_hours %>
+    <div class="form-group">
+      <%= f.label :description, "Description" %>
+      <%= f.text_area :description, class: "form-control" %>
+      <% if @restaurant.errors.present? %>
+        <ul>
+          <% @restaurant.errors.each do |error,message|%>
+            <% if error == :description %>
+              <li><%= "Description #{message}" %></li>
+            <% end %>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
 
-  <%= f.label :description, "Description" %>
-  <%= f.text_area :description %>
+    <div class="form-group">
+      <%= f.label :image, "Photo" %>
+      <%= image_tag @restaurant.image, width: '300px' if @restaurant.image? %>
+      <%= f.file_field :image %>
+    </div>
 
-  <%= f.label :image, "Photo" %>
-  <%= image_tag @restaurant.image, width: '300px' if @restaurant.image? %>
-  <%= f.file_field :image %>
-
-  <%= f.submit %>
-<% end %>
+    <%= link_to 'Back', admin_restaurants_path, class: "btn btn-default" %>
+    <%= f.submit class: "btn btn-default"%>
+  <% end %>
+</div>
