change url of bg to image-url

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -97,7 +97,7 @@ div.notice{
 }
 
 .bg{
-  background-image: url(IMG_0403.jpg);
+  background-image: image-url(IMG_0403.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
