add category name on restaurant show page

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -176,6 +176,13 @@ span{
   margin-left: 10%;
 }
 
+.container h3{
+  display: inline;
+  float: left;
+  margin: 12px 30px;
+  font-size: 20px;
+}
+
 .circle{
   border-radius: 50%;
   background-color: #C6A300;
