--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container clearfix">
-  <h1>餐廳後台</h1>
+  <h1>餐廳管理</h1>
   <div class="btn btn-default circle">
     <a href="/admin/restaurants/new">
       <span class="glyphicon glyphicon-plus center" aria-hidden="true"></span>
     </a>
-  </div>
+  </div><br><br>
+  <%= link_to '⏎ 餐廳分類管理', admin_categories_path, class: "under-title" %>
   <table class="content table">
     <thead>
       <tr>
