show errors message on form when validation fails

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -171,9 +171,7 @@ span{
 
 .container h1{
   display: inline-block;
-  float: left;
-  
-  margin-left: 10%;
+  border-bottom: 2px solid #333;
 }
 
 .container h3{
@@ -189,9 +187,9 @@ span{
   border: 0px;
   width: 40px;
   height: 40px;
-  float: left;
-  margin-left: 15px;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 160px;
 }
 
 .center{
@@ -240,7 +238,11 @@ ul{
 
 .under-title{
   display: inline-block;
-  float: left;
-  margin-left: 10%;
   font-size: 20px;
+}
+
+.left{
+  text-align: left;
+  margin-left: 10%;
+  position: relative;
 }
