--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container clearfix">
   <div class="left">
-    <h1>餐廳分類管理</h1><br>
+    <h1 class="title">餐廳分類管理</h1><br>
     <%= link_to '⏎ 餐廳管理', admin_restaurants_path, class: "under-title" %>
     <div class="form-inline">
       <%= form_for [:admin, @category] do |f| %>
@@ -27,7 +27,10 @@
       <% @categories.each do |category| %>
         <tr>
           <td><%= category.name %></td>
-          <td><%= link_to 'Edit', admin_categories_path(id: category.id) %>
+          <td>
+            <%= link_to 'Delete', admin_category_path(category), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
+            <%= link_to 'Edit', admin_categories_path(id: category.id), class: "btn btn-default btn-right" %>
+          </td>
         </tr>
       <% end %>
     </tbody>
