--- a/app/views/admin/restaurants/show.html.erb
+++ b/app/views/admin/restaurants/show.html.erb
@@ -1,10 +1,12 @@
 <div class="container clearfix">
+  <div class="left clearfix">
   <h1><%= @restaurant.name %></h1>
   <h3><%= "/ "+@restaurant.category.name %></h3>
   <div class="title-btn">
     <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default btn-right" %>
     <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
   </div>
+</div>
   <div class="content">
     <p class="space">Opening Hours: </p><%= @restaurant.opening_hours %><br>
     <p class="space">Tel: </p><%= @restaurant.tel %><br>
