--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -46,6 +46,7 @@ img {
   margin: 100px auto;
   position: relative;
   text-align: center;
+  height: 100%;
 }
 
 section{
@@ -174,7 +175,7 @@ span{
 }
 
 .container h3{
-  display: inline;
+  display: inline-block;
   margin-left: 30px;
   font-size: 20px;
 }
@@ -251,4 +252,29 @@ ul{
   margin-left: 10%;
   margin-right: 10%;
   position: relative;
+}
+
+.restaurant-item{
+  padding: 20px;
+  height: 50%;
+  text-align: left;
+}
+
+.restaurant-item h3{
+  margin: 20px 0;
+  font-size: 30px;
+}
+
+.category{
+  display: inline-block;
+  margin-left: 30px;
+  background-color: #333;
+  color: #fff;
+  padding: 1px 13px;
+  border-radius: 15px;
+}
+
+.restaurant-item:hover{
+  border: 1px solid rgba(20, 20, 20, 0.2);
+  
 }
