--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,15 @@
 <div class="container clearfix">
-<% @restaurants.each do |restaurant| %>
-  <div class="restaurant-item col-md-4">
-    <%= image_tag restaurant.image %>
-    <h3><%= link_to restaurant.name, restaurant_path(restaurant) %></h3>
-    <p class="category"><%= restaurant.category.name %></p>
-    <p><%= truncate(restaurant.description, length: 80) %></p>
-  </div>
-<% end %>
-
-<%= paginate @restaurants %>
+  <% @restaurants.each do |restaurant| %>
+    <%= link_to restaurant_path(restaurant) do %>
+      <div class="restaurant-item col-md-4">
+        <%= image_tag restaurant.image %>
+        <h3><%= restaurant.name %></h3>
+        <p class="category"><%= restaurant.category.name %></p>
+        <p><%= truncate(restaurant.description, length: 80) %></p>
+      </div>
+    <% end %>
+  <% end %>
+<%#為啥是:nth-child(4)????%>
+  <%= paginate @restaurants %>
 
 </div>
