--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container clearfix">
   <ul class="nav nav-pills nav-center">
-    <li role="presentation" class="active"><%= link_to "全部餐廳", root_path %></li>
+    <li role="presentation"><%= link_to "全部餐廳", root_path %></li>
     <% @categories.each do |category| %>
-      <li role="presentation">
+      <li role="presentation" class="<%= "active" if category == @category %>">
         <%= link_to category.name, category_path(category) %>
       </li>
     <% end %>
