admin can delete comment/make the category on show page linkable

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -305,7 +305,7 @@ display: inline-block;
   display: table;
 }
 
-.leave-messeges{
+.leave-messages{
   width: 30%;
   margin-left: 15%;
   margin-top: 70px;
@@ -321,3 +321,7 @@ display: inline-block;
   color: #fff;
 }
 
+p.text-muted{
+  display: inline-block;
+  margin-right: 30px;
+}
