--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container clearfix">
   <div class="left clearfix">
     <h1><%= @restaurant.name %></h1>
-    <h3><%= "/ "+@restaurant.category.name %></h3>
+    <h3><%= link_to "/ "+@restaurant.category.name, category_path(@category) %></h3>
     <div class="title-btn">
       <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default btn-right" %>
       <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
@@ -33,10 +33,13 @@
       <h4><%= comment.user.email.split('@')[0] %></h4><br>
       <p><%= simple_format comment.content %></p><br>
       <p class="text-muted"><em><%= time_ago_in_words(comment.created_at) %></em></p>
+      <% if current_user.admin? %>
+        <%= link_to "Delete", restaurant_comment_path(@restaurant, comment), method: :delete, class: "btn btn-default" %>
+      <% end %>
       <hr>
     </div>
     <% end %>
-  <div class="leave-messeges">
+  <div class="leave-messages">
     <div class="row">
       <%= form_for [@restaurant, @comment] do |f| %>
       <div class="form-group">
