add image-column to dev:fake_restaurant

--- a/app/views/shared/_restaurant_list.html.erb
+++ b/app/views/shared/_restaurant_list.html.erb
@@ -1,7 +1,12 @@
 <% @restaurants.each do |restaurant| %>
   <%= link_to restaurant_path(restaurant) do %>
     <div class="restaurant-item col-md-4">
-      <%= image_tag restaurant.image %>
+      <% for img_id in 0..20 %>
+  <% if image_path(restaurant.image).include?('/'+img_id.to_s+'.jpg') %>
+    <%= image_tag('/seed_img/'+img_id.to_s+'.jpg') %>
+  <% end %>
+<% end %>
+
       <h3><%= restaurant.name %></h3>
       <p class="category"><%= restaurant.category.name %></p>
       <p><%= truncate(restaurant.description, length: 80) %></p>
