change the way that image shows on show page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -12,7 +12,11 @@
     <p class="space">Tel: </p><%= @restaurant.tel %><br>
     <p class="space">Address: </p><%= @restaurant.address %><br><br>
     <p class="space">Description: </p><%= @restaurant.description %><br>
-    <%= image_tag @restaurant.image, width: '600px' %>
+    <% for img_id in 0..20 %>
+      <% if image_path(@restaurant.image).include?('/'+img_id.to_s+'.jpg') %>
+        <%= image_tag('/seed_img/'+img_id.to_s+'.jpg') %>
+      <% end %>
+    <% end %>
   </div>
   <nav aria-label="...">
     <ul class="pager clearfix">
