--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
     <div class="nav navbar-nav navbar-right user">
       <% if current_user %>
         Hi, <%= current_user.email %>
+        <%= link_to 'Profile' %>
         <%= link_to('登出', destroy_user_session_path, method: :delete) %> |
         <%= link_to('修改密碼', edit_user_registration_path) %>
       <% else %>
