--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,7 @@
     <% end %>
     <div class="nav navbar-nav navbar-right user">
       <% if current_user %>
-        Hi, <%= current_user.email %>
-        <%= link_to 'Profile' %>
+        <%= link_to 'Hi, ' + current_user.email.split('@').first, user_path(current_user), class: "my-name" %>
         <%= link_to('登出', destroy_user_session_path, method: :delete) %> |
         <%= link_to('修改密碼', edit_user_registration_path) %>
       <% else %>
