setup routes for feeds and dashboard pages

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -296,7 +296,7 @@ float: none;
 display: inline-block;
 }
 
-.container .clearfix a:nth-child(3n+4)::after{
+.container > a:nth-child(3n+4)::after{
   content: " ";
   clear: both;
   display: table;
