--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,8 @@
 <div class="container clearfix">
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active"><%= link_to "首頁", root_path %></li>
+    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+  </ul>
   <ul class="nav nav-pills nav-center">
     <li role="presentation" class="active"><%= link_to "全部餐廳", root_path %></li>
     <% @categories.each do |category| %>
