--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,9 +3,14 @@
     <h1><%= @restaurant.name %></h1>
     <h3><%= link_to "/ "+@restaurant.category.name, category_path(@category) %></h3>
     <div class="title-btn">
-      <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default btn-right" %>
-      <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
+      <%= link_to 'Dashboard', dashboard_restaurant_path, class: "btn btn-default btn-right" %>
+      <% if current_user.admin? %>
+        <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
+        <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default btn-right" %>
+      <% end %>
     </div>
+    
+    
   </div>
   <div class="content">
     <p class="space">Opening Hours: </p><%= @restaurant.opening_hours %><br>
