--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,10 +3,12 @@
     <h1><%= @restaurant.name %></h1>
     <h3><%= link_to "/ "+@restaurant.category.name, category_path(@category) %></h3>
     <div class="title-btn">
-      <%= link_to 'Dashboard', dashboard_restaurant_path, class: "btn btn-default btn-right" %>
+      <%= link_to 'Dashboard', dashboard_restaurant_path, class: "btn btn-default" %>
+      <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-default" %>
+      <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-default" %>
       <% if current_user.admin? %>
-        <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default btn-right" %>
-        <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default btn-right" %>
+        <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default" %>
+        <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default" %>
       <% end %>
     </div>
     
