--- a/app/views/shared/_restaurant_list.html.erb
+++ b/app/views/shared/_restaurant_list.html.erb
@@ -9,7 +9,8 @@
 
       <h3><%= restaurant.name %></h3>
       <p class="category"><%= restaurant.category.name %></p>
-      <p><%= truncate(restaurant.description, length: 80) %></p>
+      <p><%= truncate(restaurant.description, length: 80) %></p><br>
+      <%= render partial: "shared/favorite", locals: {restaurant: restaurant} %>
     </div>
   <% end %>
 <% end %>
