--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -4,8 +4,7 @@
     <h3><%= link_to "/ "+@restaurant.category.name, category_path(@category) %></h3>
     <div class="title-btn">
       <%= link_to 'Dashboard', dashboard_restaurant_path, class: "btn btn-default" %>
-      <%= link_to 'Favorite', favorite_restaurant_path(@restaurant), method: :post, class: "btn btn-default" %>
-      <%= link_to 'Unfavorite', unfavorite_restaurant_path(@restaurant), method: :post, class: "btn btn-default" %>
+      <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
       <% if current_user.admin? %>
         <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default" %>
         <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default" %>
