--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -5,6 +5,8 @@
     <div class="title-btn">
       <%= link_to 'Dashboard', dashboard_restaurant_path, class: "btn btn-default" %>
       <%= render partial: "shared/favorite", locals: {restaurant: @restaurant} %>
+      <%= link_to 'Like', like_restaurant_path(@restaurant), method: :post, class: "btn btn-default fav" %>
+      <%= link_to 'Unlike', unlike_restaurant_path(@restaurant), method: :post, class: "btn btn-default unfav" %>
       <% if current_user.admin? %>
         <%= link_to 'Edit', edit_admin_restaurant_path(@restaurant), class: "btn btn-default" %>
         <%= link_to 'Delete', admin_restaurant_path(@restaurant), method: :delete, data: {confirm:"Are you sure?"}, class: "btn btn-default" %>
