add is_liked? method/add like(unlike) button using shared partial

--- a/app/views/shared/_restaurant_list.html.erb
+++ b/app/views/shared/_restaurant_list.html.erb
@@ -11,6 +11,7 @@
       <p class="category"><%= restaurant.category.name %></p>
       <p><%= truncate(restaurant.description, length: 80) %></p><br>
       <%= render partial: "shared/favorite", locals: {restaurant: restaurant} %>
+      <%= render partial: "shared/like", locals: {restaurant: restaurant} %>
     </div>
   <% end %>
 <% end %>
