--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container clearfix">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs nav-bottom">
     <li role="presentation" class="active"><%= link_to "首頁", root_path %></li>
     <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
   </ul>
