--- a/app/views/restaurants/feeds.html.erb
+++ b/app/views/restaurants/feeds.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs nav-bottom">
     <li role="presentation"><%= link_to "首頁", root_path %></li>
     <li role="presentation" class="active"><%= link_to "最新動態", feeds_restaurants_path %></li>
+    <li role="presentation"><%= link_to "美食達人", users_path %></li>
   </ul>
   <h1 class="block">餐廳最新動態</h1>
   
