--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -2,6 +2,7 @@
   <ul class="nav nav-tabs nav-bottom">
     <li role="presentation" class="active"><%= link_to "首頁", root_path %></li>
     <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+    <li role="presentation"><%= link_to "美食達人", users_path %></li>
   </ul>
   <ul class="nav nav-pills nav-center">
     <li role="presentation" class="active"><%= link_to "全部餐廳", root_path %></li>
