--- a/app/views/shared/_follow.html.erb
+++ b/app/views/shared/_follow.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.following?(user)%>
-  <%= link_to 'Unfollow', followship_path(user), method: :delete %>
+  <%= link_to 'Unfollow', followship_path(user), method: :delete, class: "btn btn-follow" %>
 <% else %>
-  <%= link_to 'Follow', followships_path(following_id: user), method: :post %>
+  <%= link_to 'Follow', followships_path(following_id: user), method: :post, class: "btn btn-follow" %>
 <% end %>
