--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,30 @@
-<ul>
-
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %>
-      <% if user != current_user %>
-        <%= render partial: "shared/follow", locals: {user: user} %>
-      <% end %>
-    </li>
-  <% end %>
-
-</ul>
+<div class="container">
+  <ul class="nav nav-tabs nav-bottom">
+    <li role="presentation"><%= link_to "首頁", root_path %></li>
+    <li role="presentation"><%= link_to "最新動態", feeds_restaurants_path %></li>
+    <li role="presentation" class="active"><%= link_to "美食達人", users_path %></li>
+  </ul>
+  <h1 class="block">美食達人</h1>
+  
+  <div class="all-users">
+    <% @users.each do |user| %>
+      <div class="users">
+        <%= link_to user_path(user) do %>
+          <div>
+            <div class="pic">
+              <% for img_id in 11..16 %>
+                <% if image_path(user.avatar).include?('/'+img_id.to_s+'.jpg') %>
+                  <%= image_tag('/seed_img/'+img_id.to_s+'.jpg', class: "users-avatar") if user.avatar? %>
+                <% end %>
+              <% end %>
+            </div>
+            <p><%= user.name %></p>
+          </div>
+        <% end %>
+        <% if user != current_user %>
+          <%= render partial: "shared/follow", locals: {user: user} %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
