change user.email.name touser.name

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -41,7 +41,7 @@
   </nav>
   <% @restaurant.comments.each do |comment| %>
     <div class="left">
-      <h4><%= comment.user.email.name %></h4><br>
+      <h4><%= comment.user.name %></h4><br>
       <p><%= simple_format comment.content %></p><br>
       <p class="text-muted"><em><%= time_ago_in_words(comment.created_at) %></em></p>
       <% if current_user.admin? %>
