add favorites restaurants, followings and followers to user profile

--- a/app/views/restaurants/feeds.html.erb
+++ b/app/views/restaurants/feeds.html.erb
@@ -6,7 +6,7 @@
   </ul>
   <h1 class="block">餐廳最新動態</h1>
   
-  <div class="panel panel-default col-md-4 col-md-offset-1">
+  <div class="panel panel-default col-md-5">
     <div class="panel-heading">
       <h3 class="panel-title">最新餐廳</h3>
     </div>
@@ -19,7 +19,7 @@
       <% end %>
     </div>
   </div>
-  <div class="panel panel-default col-md-4 col-md-offset-2">
+  <div class="panel panel-default col-md-5 col-md-offset-2">
     <div class="panel-heading">
       <h3 class="panel-title">最新評論</h3>
     </div>
