add create action for friendship record

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,6 +24,7 @@
             </div>
           <% end %>
           <%= render partial: "shared/follow", locals: {user: user} %>
+          <%= link_to 'Friend', friendships_path(friend_id: user), method: :post %>
         </div>
       <% end %>
     <% end %>
